Fix alignment in investor distribution chart

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -436,6 +436,7 @@ p {
         justify-content: space-between;
         position: relative;
         max-width: 830px;
+        align-items: flex-start;
 
         .sub-title {
             display: flex;
